--- a/charts/commons/templates/deployment.yaml
+++ b/charts/commons/templates/deployment.yaml
@@ -65,13 +65,13 @@ spec:
             {{- range . }}
             - name: {{ .name }}
               {{- with .value }}
-              value: {{ include "commons.getValue" (dict "Values" $.Values "Chart" $.Chart "Release" $.Release "component" $component "value" .) }}
+              value: {{ include "commons.getValue" (dict "Values" $.Values "Chart" $.Chart "Release" $.Release "component" $component "value" (quote .)) }}
               {{- end }}
               {{- with .valueFrom }}
               valueFrom:
                 {{- if .secretKeyRef }}
                 secretKeyRef:
-                  name: {{ include "commons.getValue" (dict "Values" $.Values "Chart" $.Chart "Release" $.Release "component" $component "value" .secretKeyRef.name) }}
+                  name: {{ include "commons.getValue" (dict "Values" $.Values "Chart" $.Chart "Release" $.Release "component" $component "value" (quote .secretKeyRef.name)) }}
                   key: {{ .secretKeyRef.key }}
                 {{- else }}
                 {{- toYaml . | nindent 16 }}
@@ -101,13 +101,13 @@ spec:
             {{- range .env }}
             - name: {{ .name }}
               {{- with .value }}
-              value: {{ include "commons.getValue" (dict "Values" $.Values "Chart" $.Chart "Release" $.Release "component" $component "value" .) }}
+              value: {{ include "commons.getValue" (dict "Values" $.Values "Chart" $.Chart "Release" $.Release "component" $component "value" (quote .)) }}
               {{- end }}
               {{- with .valueFrom }}
               valueFrom:
                 {{- if .secretKeyRef }}
                 secretKeyRef:
-                  name: {{ include "commons.getValue" (dict "Values" $.Values "Chart" $.Chart "Release" $.Release "component" $component "value" .secretKeyRef.name) }}
+                  name: {{ include "commons.getValue" (dict "Values" $.Values "Chart" $.Chart "Release" $.Release "component" $component "value" (quote .secretKeyRef.name)) }}
                   key: {{ .secretKeyRef.key }}
                 {{- else }}
                 {{- toYaml . | nindent 16 }}
