--- a/charts/commons/templates/cnpg/secret.yaml
+++ b/charts/commons/templates/cnpg/secret.yaml
@@ -12,7 +12,7 @@ data:
   password: {{ .cluster.password | b64enc | quote }}
 kind: Secret
 metadata:
-  name: {{ include "commons.fullname" (dict "Chart" $.Chart "Values" $.Values "Release" $.Release "name" .name "component" $component) }}-secret
+  name: {{ include "commons.fullname" (dict "Chart" $.Chart "Values" $.Values "Release" $.Release "name" .name "component" $component) }}-postgres-secret
 type: kubernetes.io/basic-auth
 ---
 {{- end }}
