--- a/charts/commons/tests/values/values.yaml
+++ b/charts/commons/tests/values/values.yaml
@@ -65,6 +65,7 @@ components:
       volumeMounts:
         - name: config
           mountPath: /etc/config
+      volumes:
         - name: data
           persistentVolumeClaim:
             claimName: __components__pvc__data-pvc
