--- a/charts/commons/tests/deployments_test.yaml
+++ b/charts/commons/tests/deployments_test.yaml
@@ -47,10 +47,10 @@ tests:
       value: test-nginx
     asserts:
       - equal:
-          path: spec.template.spec.containers[0].volumes[0].persistentVolumeClaim.claimName
+          path: spec.template.spec.volumes[0].persistentVolumeClaim.claimName
           value: test-nginx-data-pvc
       - equal:
-          path: spec.template.spec.containers[0].volumes[0].persistentVolumeClaim.subPath
+          path: spec.template.spec.volumes[0].persistentVolumeClaim.subPath
           value: data
   - it: Vérifie le Deployment vscode
     documentSelector:
