--- a/charts/commons/templates/cnpg/cluster.yaml
+++ b/charts/commons/templates/cnpg/cluster.yaml
@@ -1,6 +1,6 @@
 {{- $components := include "commons.withAddons" . | fromYamlArray }}
 {{- $raw := .Values.addons | default dict }}
-{{- $_ := set $raw "name" "postgres" }}
+{{- $_ := set $raw "name" "global" }}
 {{- $components = append $components $raw }}
 {{- range $components }}
 {{- $component := . }}
