--- a/charts/commons/tests/secrets_test.yaml
+++ b/charts/commons/tests/secrets_test.yaml
@@ -29,7 +29,7 @@ tests:
       - templates/cnpg/secret.yaml
     documentSelector:
       path: metadata.name
-      value: test-global-postgres-secret
+      value: test-postgres-secret
     asserts:
       - equal:
           path: type
