--- a/charts/commons/tests/values/values.yaml
+++ b/charts/commons/tests/values/values.yaml
@@ -99,7 +99,7 @@ components:
         accessMode: ReadWriteOnce
         storage: 1Gi
         storageClassName: local-path
-      - name: data-2
+      - name: data-2-pvc
         accessMode: ReadWriteOnce
         storage: 2Gi
         storageClassName: local-path
