--- a/charts/commons/tests/ingress_test.yaml
+++ b/charts/commons/tests/ingress_test.yaml
@@ -19,3 +19,6 @@ tests:
       - equal:
           path: spec.tls[0].secretName
           value: web-cert
+      - equal:
+          path: spec.rules[0].host.https.paths[0].backend.service.name
+          value: test-nginx
