--- a/charts/commons/tests/ingress_test.yaml
+++ b/charts/commons/tests/ingress_test.yaml
@@ -20,5 +20,5 @@ tests:
           path: spec.tls[0].secretName
           value: web-cert
       - equal:
-          path: spec.rules[0].host.https.paths[0].backend.service.name
+          path: spec.rules[0].host.http.paths[0].backend.service.name
           value: test-nginx
