--- a/charts/commons/tests/values/values.yaml
+++ b/charts/commons/tests/values/values.yaml
@@ -17,6 +17,26 @@ global:
       tag: 16
   ingress:
     className: traefik
+  rbac:
+    enabled: true
+    clusterRoleName: homepage
+    serviceAccountName: homepage
+    rules:
+      - apiGroups: [""]
+        resources: ["namespaces", "pods", "nodes"]
+        verbs: ["get", "list"]
+      - apiGroups: ["extensions", "networking.k8s.io"]
+        resources: ["ingresses"]
+        verbs: ["get", "list"]
+      - apiGroups: ["traefik.io"]
+        resources: ["ingressroutes"]
+        verbs: ["get", "list"]
+      - apiGroups: ["gateway.networking.k8s.io"]
+        resources: ["httproutes", "gateways"]
+        verbs: ["get", "list"]
+      - apiGroups: ["metrics.k8s.io"]
+        resources: ["nodes", "pods"]
+        verbs: ["get", "list"]
 
 components:
   - name: nginx
