--- a/charts/commons/templates/configmap.yaml
+++ b/charts/commons/templates/configmap.yaml
@@ -2,16 +2,18 @@
 {{- range $components }}
 {{- $component := . }}
 {{- with $component.configMap }}
+{{- range $i, $configmap := . }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ include "commons.fullname" (dict "Chart" $.Chart "Values" $.Values "Release" $.Release "name" (default "configmap" .name) "component" $component) }}
+  name: {{ include "commons.fullname" (dict "Chart" $.Chart "Values" $.Values "Release" $.Release "name" (default (printf "configmap-%d" $i) $configmap.name) "component" $component) }}
   labels:
-    {{ include "commons.labels" (dict "Chart" $.Chart "Values" $.Values "Release" $.Release "name" (default "configmap" .name) "component" $component) | nindent 4 }}
+    {{ include "commons.labels" (dict "Chart" $.Chart "Values" $.Values "Release" $.Release "name" (default (printf "configmap-%d" $i) $configmap.name) "component" $component) | nindent 4 }}
 data:
-  {{- range $filename, $content := .data }}
+  {{- range $filename, $content := $configmap.data }}
   {{ $filename }}: |-
   {{ $content | indent 4 }}
   {{- end }}
+{{- end }}
 {{- end }}
 {{- end }}
