--- a/charts/commons/tests/values/values.yaml
+++ b/charts/commons/tests/values/values.yaml
@@ -126,8 +126,9 @@ components:
     configMap:
       - name: config
         data:
-          config.yaml: |-
-            key: value
+          toto.yaml: |-
+            foo: bar
+            user: titi
     postgres:
       enabled: true
       image:
