--- a/charts/commons/tests/values/values.yaml
+++ b/charts/commons/tests/values/values.yaml
@@ -126,9 +126,10 @@ components:
     configMap:
       - name: config
         data:
+          config.yaml: |-
+            key: value
           toto.yaml: |-
-            foo: bar
-            user: titi
+            key: value
     postgres:
       enabled: true
       image:
