--- a/charts/commons/tests/configmap_test.yaml
+++ b/charts/commons/tests/configmap_test.yaml
@@ -13,12 +13,11 @@ tests:
       path: metadata.name
       value: test-nginx-config
     asserts:
-      - matchRegex:
+      - equal:
           path: data.config.yaml
-          pattern: "key: value"
-      - matchRegex:
+          value: |
+            key: value
+      - equal:
           path: data.toto.yaml
-          pattern: "user: titi"
-      - matchRegex:
-          path: data.toto.yaml
-          pattern: "foo: bar"
+          value: |
+            key: value
