--- a/charts/commons/tests/values/values.yaml
+++ b/charts/commons/tests/values/values.yaml
@@ -129,8 +129,7 @@ components:
           config.yaml: |
             key: value
           toto.sh: |
-            #!/bin/sh
-            echo "titi"
+            key: value
 
     postgres:
       enabled: true
