--- a/charts/commons/templates/configmap.yaml
+++ b/charts/commons/templates/configmap.yaml
@@ -11,7 +11,7 @@ metadata:
     {{ include "commons.labels" (dict "Chart" $.Chart "Values" $.Values "Release" $.Release "name" (default (printf "configmap-%d" $i) $configmap.name) "component" $component) | nindent 4 }}
 data:
   {{- range $filename, $content := $configmap.data }}
-  {{ $filename }}: |-
+  {{ $filename }}: |
   {{ $content | indent 2 }}
   {{- end }}
 {{- end }}
