--- a/charts/commons/tests/configmap_test.yaml
+++ b/charts/commons/tests/configmap_test.yaml
@@ -14,10 +14,10 @@ tests:
       value: test-nginx-config
     asserts:
       - equal:
-          path: data[config.yaml]
+          path: data["config.yaml"]
           value: |
             key: value
       - equal:
-          path: data[toto.sh]
+          path: data["toto.sh"]
           value: |
             key: value
