--- a/charts/commons/templates/rbac/serviceaccount.yaml
+++ b/charts/commons/templates/rbac/serviceaccount.yaml
@@ -6,5 +6,5 @@ metadata:
   labels:
     {{ include "commons.labels" (dict "Chart" $.Chart "Values" $.Values "Release" $.Release "name" .Values.global.rbac.serviceAccountName) | nindent 4 }}
 secrets:
-  - name: {{ .Values.global.rbac.serviceAccountName }}
+  - name: {{ .Values.global.rbac.serviceAccountName }}-secret
 {{- end }}
