--- a/charts/commons/templates/deployment.yaml
+++ b/charts/commons/templates/deployment.yaml
@@ -119,6 +119,9 @@ spec:
             {{- range .volumeMounts }}
             - name: {{ .name }}
               mountPath: {{ .mountPath }}
+              {{- with .subPath }}
+              subPath: {{ . }}
+              {{- end }}
             {{- end }}
           {{- end }}
           {{- if .ports }}
