--- a/charts/commons/tests/deployments_test.yaml
+++ b/charts/commons/tests/deployments_test.yaml
@@ -15,7 +15,7 @@ tests:
     asserts:
       - equal:
           path: spec.replicas
-          value: 2
+          value: 
       - equal:
           path: spec.template.spec.containers[0].image
           value: nginx:latest
@@ -83,7 +83,7 @@ tests:
           enabled: false
     asserts:
       - hasDocuments:
-          count: 2
+          count: 3
 
   - it: ne doit pas créer le Service Vscode si désactivé
     set:
@@ -92,4 +92,4 @@ tests:
           enabled: false
     asserts:
       - hasDocuments:
-          count: 2
+          count: 3
