--- a/charts/commons/tests/deployments_test.yaml
+++ b/charts/commons/tests/deployments_test.yaml
@@ -15,7 +15,7 @@ tests:
     asserts:
       - equal:
           path: spec.replicas
-          value: 
+          value: 2
       - equal:
           path: spec.template.spec.containers[0].image
           value: nginx:latest
