--- a/charts/commons/templates/deployment.yaml
+++ b/charts/commons/templates/deployment.yaml
@@ -18,17 +18,19 @@ spec:
       labels:
         {{- include "commons.selectorLabels" (dict "Chart" $.Chart "Values" $.Values "Release" $.Release "name" .name "component" $component) | nindent 8 }}
     spec:
-      {{- $sc := default dict .securityContext }}
-      {{- if or $sc.runAsUser $sc.runAsGroup $sc.fsGroup $.Values.global.securityContext }}
+      {{- $sc := .securityContext | default (dict) }}
+      {{- $gsc := $.Values.global.securityContext | default (dict) }}
+
+      {{- if or $sc.runAsUser $sc.runAsGroup $sc.fsGroup $gsc.runAsUser $gsc.runAsGroup $gsc.fsGroup }}
       securityContext:
-        {{- if or $sc.runAsUser $.Values.global.securityContext.runAsUser}}
-        runAsUser: {{ default $.Values.global.securityContext.runAsUser $sc.runAsUser }}
+        {{- if or $sc.runAsUser $gsc.runAsUser }}
+        runAsUser: {{ default $sc.runAsUser $gsc.runAsUser }}
         {{- end }}
-        {{- if or $sc.runAsUser $.Values.global.securityContext.runAsGroup}}
-        runAsGroup: {{ default $.Values.global.securityContext.runAsGroup $sc.runAsGroup }}
+        {{- if or $sc.runAsGroup $gsc.runAsGroup }}
+        runAsGroup: {{ default $sc.runAsGroup $gsc.runAsGroup }}
         {{- end }}
-        {{- if or $sc.runAsUser $.Values.global.securityContext.fsGroup}}
-        fsGroup: {{ default $.Values.global.securityContext.fsGroup $sc.fsGroup }}
+        {{- if or $sc.fsGroup $gsc.fsGroup }}
+        fsGroup: {{ default $sc.fsGroup $gsc.fsGroup }}
         {{- end }}
       {{- end }}
       {{- with .initContainers }}
