--- a/charts/commons/templates/deployment.yaml
+++ b/charts/commons/templates/deployment.yaml
@@ -18,9 +18,24 @@ spec:
       labels:
         {{- include "commons.selectorLabels" (dict "Chart" $.Chart "Values" $.Values "Release" $.Release "name" .name "component" $component) | nindent 8 }}
     spec:
+      {{- $sc := .securityContext | default (dict) }}
+      {{- $gsc := $.Values.global.securityContext | default (dict) }}
       securityContext:
-        runAsUser: {{ .securityContext.runAsUser }}
-        runAsGroup: 5
+        {{- if hasKey $sc "runAsUser" }}
+        runAsUser: {{ $sc.runAsUser }}
+        {{- else if hasKey $gsc "runAsUser" }}
+        runAsUser: {{ $gsc.runAsUser }}
+        {{- end }}
+        {{- if hasKey $sc "runAsGroup" }}
+        runAsGroup: {{ $sc.runAsGroup }}
+        {{- else if hasKey $gsc "runAsGroup" }}
+        runAsGroup: {{ $gsc.runAsGroup }}
+        {{- end }}
+        {{- if hasKey $sc "fsGroup" }}
+        fsGroup: {{ $sc.fsGroup }}
+        {{- else if hasKey $gsc "fsGroup" }}
+        fsGroup: {{ $gsc.fsGroup }}
+        {{- end }}
       {{- with .initContainers }}
       {{- if .containers }}
       initContainers:
