--- a/charts/commons/templates/deployment.yaml
+++ b/charts/commons/templates/deployment.yaml
@@ -179,7 +179,7 @@ spec:
             readOnly: {{ . }}
             {{- end }}
         {{- else }}
-        {{- toYaml . | nindent 8 }}
+        - {{- toYaml . | nindent 8 }}
         {{- end }}
       {{- end }}
       {{- end }}
