--- a/charts/commons/templates/deployment.yaml
+++ b/charts/commons/templates/deployment.yaml
@@ -98,7 +98,8 @@ spec:
       containers:
         - name: {{ .name | default $component.name }}
           {{- with .securityContext }}
-          {{- toYaml . | nindent 10 }}
+          securityContext:
+            {{- toYaml . | nindent 12 }}
           {{- end }}
           image: {{ .image.repository }}:{{ .image.tag | default "latest"  }}
           env:
