nouveau test quote

--- a/charts/commons/templates/deployment.yaml
+++ b/charts/commons/templates/deployment.yaml
@@ -71,7 +71,7 @@ spec:
             {{- range . }}
             - name: {{ .name }}
               {{- with .value }}
-              value: {{ include "commons.getValue" (dict "Values" $.Values "Chart" $.Chart "Release" $.Release "component" $component "value" .) }}
+              value: {{ include "commons.getValue" (dict "Values" $.Values "Chart" $.Chart "Release" $.Release "component" $component "value" .) | quote }}
               {{- end }}
               {{- with .valueFrom }}
               valueFrom:
@@ -108,7 +108,7 @@ spec:
             {{- range .env }}
             - name: {{ .name }}
               {{- with .value }}
-              value: {{ include "commons.getValue" (dict "Values" $.Values "Chart" $.Chart "Release" $.Release "component" $component "value" .) }}
+              value: {{ include "commons.getValue" (dict "Values" $.Values "Chart" $.Chart "Release" $.Release "component" $component "value" .) | quote }}
               {{- end }}
               {{- with .valueFrom }}
               valueFrom:
